--- a/examples/card.html
+++ b/examples/card.html
@@ -100,50 +100,6 @@
           <div class="row" id="card-renderer">
             <!--div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
-                <div class="card-header card-header-success card-header-icon">
-                  <div class="card-icon">
-                    <img class="img" src="../assets/img/veg/banana.png" />
-                  </div>
-                  <h4 class="card-title">Banana</h4>
-                  <h3 class="card-title">2 Days</h3>
-                </div>
-                <div class="card-footer">
-                  <div class="stats">
-                    <div class="progress-group" style="width: 100%">
-					Scanned On : 29/06/2018
-                      <span class="float-right"></span>
-                      <div class="progress progress-md">
-                        <div class="progress-bar bg-danger" style="width: 80%"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div-->
-            <!--div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                <div class="card-header card-header-danger card-header-icon">
-                  <div class="card-icon">
-                    <img class="img" src="../assets/img/veg/pineapple.png" />
-                  </div>
-                  <h4 class="card-title">Pineapple</h4>
-                  <h3 class="card-title">6 Days</h3>
-                </div>
-                <div class="card-footer">
-                  <div class="stats">
-                    <div class="progress-group" style="width: 100%">
-					Scanned On : 29/06/2018
-                      <span class="float-right"></span>
-                      <div class="progress progress-md">
-                        <div class="progress-bar bg-success" style="width: 30%"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
                 <div class="card-header card-header-info card-header-icon">
                   <div class="card-icon">
                     <img class="img" src="../assets/img/veg/pomegranate.png" />
@@ -174,7 +130,7 @@
             <ul>
               <li>
                 <a href="#">
-                  MartFresh
+                  FRESHCO
                 </a>
               </li>
               <li>
@@ -199,7 +155,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script><i class="material-icons"></i>
-            <a href="https://www.creative-tim.com" target="_blank">MartFresh</a>
+            <a href="https://www.creative-tim.com" target="_blank">FRESHCO</a>
           </div>
         </div>
       </footer>
@@ -224,76 +180,14 @@
     $(document).ready(function() {
       // Javascript method's body can be found in assets/js/demos.js
       md.initDashboardPageCharts();
-
-      $("button.delete-entry").click(function(){
-        alert("yuss");
-      });
-
     });
   </script>
   <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase-database.js"></script>
-<script>
-  var config = {
-    apiKey: "AIzaSyCPqT8Q6t6-c0kmFk45ZWpWlkaX-9VknLE",
-    authDomain: "angelhack-34ca9.firebaseapp.com",
-    databaseURL: "https://angelhack-34ca9.firebaseio.com",
-    projectId: "angelhack-34ca9",
-    storageBucket: "angelhack-34ca9.appspot.com",
-    messagingSenderId: "378621137671"
-  };
-  firebase.initializeApp(config);
-
-  var database = firebase.database();
-  var ref = database.ref('angel');
-
-  ref.on("value",function(snapshot){
-      data= snapshot.val();
-      console.log(typeof data);
-      $("#card-renderer").html("");
-      $.each(data,function(key,val){
-        var date = key;
-        var string_date = "'"+date+"'";
-        var days_left = val['days_left'];
-        var fruit = val['fruit'];
-        var state = val['state'];
-        console.log(val['days_left']);
-
-        var progress_class = "";
-        var width = "";
-
-        if(state == "ripe")
-        {
-          progress_class = "bg-warning";
-          width = "50%";
-        }
-        else if(state == "over ripe")
-        {
-          progress_class = "bg-danger";
-          width = "80%";
-        }
-        else
-        {
-          progress_class = "bg-success";
-          width = "30%";
-        }
-        $("#card-renderer").append('<div class="col-lg-3 col-md-6 col-sm-6"><div class="card card-stats"><div class="card-header card-header-warning card-header-icon"><div class="card-icon"><img class="img" src="../assets/img/veg/banana.png" /></div><h4 class="card-title">'+state+'\t'+fruit+'</h4><h3 class="card-title">'+days_left+' Days</h3></div><div class="card-footer"><div class="progress-group" style="width: 100%">Scanned On :'+date+'<span class="float-right"></span><div class="progress progress-md"><div class="progress-bar '+progress_class+'" style="width: '+width+'"></div></div></div><br><p><button type="button" class="btn btn-danger btn-round btn-just-icon" onclick="deleteEntry('+string_date+')"><i class="material-icons" style="text-align:center;">delete</i></button></p></div></div></div>');
-        /*console.log(key);
-        $.each(val,function(key2,val2){
-          console.log(key2+" "+val2);
-        });*/
-      });
-      console.log(data);
-  },function(error){
-      console.log(error.code);
-  });
-
-  function deleteEntry(id)
-  {
-    firebase.database().ref('angel/'+id).remove();
-  }
-</script>
+<script src="https://www.gstatic.com/firebasejs/5.1.0/firebase-messaging.js"></script>
+<script src="../js/config.js"></script>
+<script src="../js/database.js"></script>
+<script src="../js/notifications.js"></script>
 </body>
-
 </html>
